--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI = mongodb+srv://saisolution:saisolution@cluster0.cih9gt4.mongodb.net/?retryWrites=true&w=majority
 AUTH_SECRET = waC6IwQnfwV8DH2SFU8xFyJ23Cgnv5G97SDI5rQ95eM=
+BASE_URL = https://next-js-sai-solution.vercel.app
